[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://Settings.gd" type="Script" id=2]

[node name="Settings" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -266.5
margin_top = -230.5
margin_right = 266.5
margin_bottom = 230.5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 533.0
margin_bottom = 94.0
size_flags_vertical = 0
custom_constants/margin_top = 40
custom_constants/margin_bottom = 40

[node name="Title" type="Label" parent="VBoxContainer/MarginContainer"]
margin_top = 40.0
margin_right = 533.0
margin_bottom = 54.0
size_flags_vertical = 3
text = "-- SETTINGS --"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 533.0
margin_bottom = 284.0
size_flags_vertical = 3
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="HBoxContainer" parent="VBoxContainer/Body"]
margin_right = 533.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer/Body/Fullscreen"]
margin_left = 201.0
margin_top = 13.0
margin_right = 264.0
margin_bottom = 27.0
size_flags_horizontal = 14
text = "fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Body/Fullscreen"]
margin_left = 268.0
margin_right = 533.0
margin_bottom = 40.0
size_flags_horizontal = 7
size_flags_vertical = 4
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="Checkbox" type="CheckButton" parent="VBoxContainer/Body/Fullscreen/MarginContainer"]
margin_left = 20.0
margin_right = 96.0
margin_bottom = 40.0
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="MusicVolume" type="HBoxContainer" parent="VBoxContainer/Body"]
margin_top = 46.0
margin_right = 533.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="VBoxContainer/Body/MusicVolume"]
margin_left = 173.0
margin_top = 1.0
margin_right = 264.0
margin_bottom = 15.0
size_flags_horizontal = 14
text = "music volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Body/MusicVolume"]
margin_left = 268.0
margin_right = 533.0
margin_bottom = 16.0
size_flags_horizontal = 7
size_flags_vertical = 4
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="HSlider" type="HSlider" parent="VBoxContainer/Body/MusicVolume/MarginContainer"]
margin_left = 20.0
margin_right = 245.0
margin_bottom = 16.0
size_flags_vertical = 1
min_value = -40.0
max_value = 10.0
value = -40.0

[node name="Gravity" type="HBoxContainer" parent="VBoxContainer/Body"]
margin_top = 68.0
margin_right = 533.0
margin_bottom = 84.0

[node name="Label" type="Label" parent="VBoxContainer/Body/Gravity"]
margin_left = 222.0
margin_top = 1.0
margin_right = 264.0
margin_bottom = 15.0
size_flags_horizontal = 14
text = "gravity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Body/Gravity"]
margin_left = 268.0
margin_right = 533.0
margin_bottom = 16.0
size_flags_horizontal = 7
size_flags_vertical = 4
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="HSlider" type="HSlider" parent="VBoxContainer/Body/Gravity/MarginContainer"]
margin_left = 20.0
margin_right = 245.0
margin_bottom = 16.0
size_flags_vertical = 1
max_value = 2940.0

[node name="TotalRocksGiven" type="HBoxContainer" parent="VBoxContainer/Body"]
margin_top = 90.0
margin_right = 533.0
margin_bottom = 114.0

[node name="Label" type="Label" parent="VBoxContainer/Body/TotalRocksGiven"]
margin_left = 124.0
margin_top = 5.0
margin_right = 264.0
margin_bottom = 19.0
size_flags_horizontal = 14
text = "challenge mode rocks"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Body/TotalRocksGiven"]
margin_left = 268.0
margin_right = 533.0
margin_bottom = 24.0
size_flags_horizontal = 7
size_flags_vertical = 4
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/Body/TotalRocksGiven/MarginContainer"]
margin_left = 20.0
margin_right = 94.0
margin_bottom = 24.0
size_flags_horizontal = 0
allow_greater = true

[node name="CornerMenuHidden" type="HBoxContainer" parent="VBoxContainer/Body"]
margin_top = 120.0
margin_right = 533.0
margin_bottom = 160.0

[node name="Label" type="Label" parent="VBoxContainer/Body/CornerMenuHidden"]
margin_left = 67.0
margin_top = 13.0
margin_right = 264.0
margin_bottom = 27.0
size_flags_horizontal = 14
text = "corner menu hidden by default"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Body/CornerMenuHidden"]
margin_left = 268.0
margin_right = 533.0
margin_bottom = 40.0
size_flags_horizontal = 7
size_flags_vertical = 4
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="CheckButton" type="CheckButton" parent="VBoxContainer/Body/CornerMenuHidden/MarginContainer"]
margin_left = 20.0
margin_right = 96.0
margin_bottom = 40.0
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="Language" type="HBoxContainer" parent="VBoxContainer/Body"]
margin_top = 166.0
margin_right = 533.0
margin_bottom = 186.0

[node name="Label" type="Label" parent="VBoxContainer/Body/Language"]
margin_left = 208.0
margin_top = 3.0
margin_right = 264.0
margin_bottom = 17.0
size_flags_horizontal = 14
text = "langauge"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Body/Language"]
margin_left = 268.0
margin_right = 533.0
margin_bottom = 20.0
size_flags_horizontal = 7
size_flags_vertical = 4
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/Body/Language/MarginContainer"]
margin_left = 20.0
margin_right = 65.0
margin_bottom = 20.0
size_flags_horizontal = 2
size_flags_vertical = 4
text = "en"
items = [ "en", null, false, 0, null, "ar", null, true, 1, null, "zh", null, true, 2, null ]
selected = 0

[node name="Buttons" type="MarginContainer" parent="VBoxContainer"]
margin_top = 288.0
margin_right = 533.0
margin_bottom = 461.0
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_left = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Buttons"]
margin_left = 20.0
margin_right = 513.0
margin_bottom = 173.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ApplyButton" type="Button" parent="VBoxContainer/Buttons/HBoxContainer"]
margin_top = 73.0
margin_right = 161.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource( 1 )
text = "Apply"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="VBoxContainer/Buttons/HBoxContainer"]
margin_left = 165.0
margin_top = 73.0
margin_right = 326.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefaultsButton" type="Button" parent="VBoxContainer/Buttons/HBoxContainer"]
margin_left = 330.0
margin_top = 73.0
margin_right = 493.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource( 1 )
text = "Restore Defaults"
[connection signal="pressed" from="VBoxContainer/Buttons/HBoxContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/HBoxContainer/DefaultsButton" to="." method="_on_DefaultsButton_pressed"]
